--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
+        "laravellegends/pt-br-validator": "^10.0",
         "php-flasher/flasher-laravel": "^1.15"
     },
     "require-dev": {
