--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "bootstrap-icons": "^1.11.1"
+        "bootstrap-icons": "^1.11.1",
+        "bootstrap5": "^1.1.9",
+        "bootstrap5-toggle": "^5.0.4"
     }
 }
