--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "bootstrap-icons": "^1.11.2",
         "bootstrap4-toggle": "^3.6.1",
-        "bootstrap5-toggle": "^5.0.4"
+        "bootstrap5-toggle": "^5.0.4",
+        "select2": "^4.1.0-rc.0"
     }
 }
