--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@types/select2": "^4.0.63",
         "bootstrap-icons": "^1.11.2",
         "bootstrap4-toggle": "^3.6.1",
         "bootstrap5-toggle": "^5.0.4",
