--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
         "bootstrap-icons": "^1.11.2",
         "bootstrap4-toggle": "^3.6.1",
         "bootstrap5-toggle": "^5.0.4",
+        "cloudflare": "^3.5.0",
+        "cryptiles": "^4.1.3",
+        "googleapis": "^140.0.1",
         "select2": "^4.1.0-rc.0",
         "select2-bootstrap-5-theme": "^1.3.0"
     }
