--- a/.env.example
+++ b/.env.example
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_HOST=192.168.1.137
+DB_PORT=5432
+DB_DATABASE=pessoal
+DB_USERNAME=postgres
+DB_PASSWORD=scga2298
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
