--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@fullcalendar/core": "^6.1.15",
+        "@fullcalendar/timegrid": "^6.1.15",
         "bootstrap-icons": "^1.11.2",
         "bootstrap4-toggle": "^3.6.1",
         "bootstrap5-toggle": "^5.1.1",
