--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=pgsql
 DB_HOST=192.168.1.137
 DB_PORT=5432
-DB_DATABASE=pessoal
+DB_DATABASE=pessoalprodteste
 DB_USERNAME=postgres
 DB_PASSWORD=scga2298
 
