--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,11 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
-DB_HOST=192.168.1.137
-DB_PORT=5432
-DB_DATABASE=pessoalprodteste
-DB_USERNAME=postgres
-DB_PASSWORD=scga2298
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=laravel
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
