--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
         "bootstrap4-toggle": "^3.6.1",
         "bootstrap5-toggle": "^5.1.1",
         "cloudflare": "^3.5.0",
-        "cryptiles": "^4.1.3",
+        "crypto": "^1.0.1",
         "googleapis": "^140.0.1",
+        "http-errors": "^2.0.0",
         "select2": "^4.1.0-rc.0",
         "select2-bootstrap-5-theme": "^1.3.0"
     }
