--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.7.2",
         "@fullcalendar/core": "^6.1.15",
         "@fullcalendar/timegrid": "^6.1.15",
         "bootstrap-icons": "^1.11.2",
