--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "googleapis": "^140.0.1",
         "http-errors": "^2.0.0",
         "select2": "^4.1.0-rc.0",
-        "select2-bootstrap-5-theme": "^1.3.0"
+        "select2-bootstrap-5-theme": "^1.3.0",
+        "webcam.js": "^1.0.1"
     }
 }
